# dna-cross-platform

./: appcs.dump.armv7a.lst
src/DNA/: dna.sln
src/DNA/hello-world/: Program.cs
src/DNA/native/: dotnet-cross-platform.files
src/DNA/native/dna-cross/: CMakeLists.txt
src/DNA/native/src/: Heap.c  JIT.c  JIT_Execute.c  MethodState.c  PInvoke.c  Sys.h  System.Array.c  System.Diagnostics.Debugger.c  Thread.c  Types.h
